fix tooltip behind toolbox, changed in z-index excel file

--- a/app/styles/bloqsproject.scss
+++ b/app/styles/bloqsproject.scss
@@ -718,7 +718,7 @@ $leftBarWidth: 70px;
 }
 
 .toolbox--main {
-    z-index: 9;
+    z-index: 7;
     height: 100%;
     min-width: 210px;
     right: 0;
